// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Item should render item with data 1`] = `
<div
  className="item"
>
  <p>
    One
  </p>
  <div
    className="item_btn_Container"
  >
    <input
      checked={false}
      onChange={[Function]}
      type="checkbox"
    />
    <button
      onClick={[Function]}
    >
      Edit
    </button>
    <button
      onClick={[Function]}
    >
      Remove
    </button>
  </div>
</div>
`;

exports[`Item should toggle edit mode 1`] = `
<div
  className="item"
>
  <p>
    One
  </p>
  <div
    className="item_btn_Container"
  >
    <input
      checked={false}
      onChange={[Function]}
      type="checkbox"
    />
    <button
      onClick={[Function]}
    >
      Edit
    </button>
    <button
      onClick={[Function]}
    >
      Remove
    </button>
  </div>
</div>
`;

exports[`Item should toggle edit mode 2`] = `
<div
  className="item"
>
  <input
    onChange={[Function]}
    type="text"
    value="One"
  />
  <div
    className="item_btn_Container"
  >
    <input
      checked={false}
      onChange={[Function]}
      type="checkbox"
    />
    <button
      onClick={[Function]}
    >
      Done
    </button>
    <button
      onClick={[Function]}
    >
      Remove
    </button>
  </div>
</div>
`;
